--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,21 @@
     "prettier.useEditorConfig": false,
     "typescript.format.semicolons": "remove",
     "typescript.preferences.quoteStyle": "single",
-    "editor.formatOnPaste": true,
-    "editor.formatOnSave": true,
-    "editor.formatOnType": true,
+    "javascript.format.semicolons": "remove",
+    "javascript.preferences.quoteStyle": "single",
     "typescript.format.indentSwitchCase": true,
     "typescript.suggest.autoImports": true,
     "typescript.check.npmIsInstalled": true,
+    "typescript.suggest.paths": true,
+    "typescript.format.enable": true,
+    "javascript.format.enable": true,
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true,
     "vsintellicode.typescript.completionsEnabled": true,
-    "typescript.suggest.paths": true
+    "terminal.integrated.cwd": "",
+    "eslint.enable": true,
+    "eslint.debug": true,
+    "eslint.experimental.useFlatConfig": true,
+    "eslint.format.enable": true
 }
