--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "typescript_course",
-  "version": "1.0.0",
-  "description": "Typescript course",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "start": "node index.js",
-    "dev": "nodemon index.ts"
-  },
-  "author": "Josias Valentim de Figueredo",
-  "license": "MIT",
-  "devDependencies": {
-    "ts-node": "^10.9.2"
-  }
+    "name": "typescript_course",
+    "version": "1.0.0",
+    "description": "Typescript course",
+    "main": "index.js",
+    "scripts": {
+        "dev": "tsc"
+    },
+    "author": "Josias Valentim de Figueredo",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/node": "^20.12.3",
+        "prettier": "3.2.5",
+        "ts-node": "^10.9.2",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.4.3"
+    }
 }
