--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     },
     "compilerOptions": {
         "target": "ES5" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-        "allowJs": true /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */,
+        "allowJs": false /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */,
         "sourceMap": true /* Create source map files for emitted JavaScript files. */,
         "outDir": "./output" /* Specify an output folder for all emitted files. */,
         "rootDir": "./scripts" /* Specify the root folder within your source files. */,
@@ -19,6 +19,8 @@
         ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
         "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
         "skipLibCheck": true /* Skip type checking all .d.ts files. */,
-        "checkJs": true
+        "checkJs": false,
+        "noLib": false,
+        "allowUnreachableCode": true
     }
 }
