--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,9 +15,5 @@
     "editor.formatOnSave": true,
     "editor.formatOnType": true,
     "vsintellicode.typescript.completionsEnabled": true,
-    "terminal.integrated.cwd": "",
-    "eslint.enable": true,
-    "eslint.debug": true,
-    "eslint.experimental.useFlatConfig": true,
-    "eslint.format.enable": true
+    "terminal.integrated.cwd": ""
 }
