--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "license": "MIT",
     "devDependencies": {
         "@types/node": "^20.12.3",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "eslint": "^8.57.0",
+        "eslint-config-standard-with-typescript": "^43.0.1",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-n": "^16.6.2",
+        "eslint-plugin-promise": "^6.1.1",
         "prettier": "3.2.5",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
-        "typescript": "^5.4.3"
+        "typescript": "^5.4.4"
     }
 }
