--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
+    "eslint.enable": true,
     "eslint.experimental.useFlatConfig": false,
+    "eslint.codeActionsOnSave.mode": "problems",
     "typescript.format.semicolons": "remove",
     "typescript.preferences.quoteStyle": "single",
     "javascript.format.semicolons": "remove",
