--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,33 +7,64 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": ["./tsconfig.json"]
+    "project": [
+      "./tsconfig.json"
+    ]
   },
-  "plugins": ["@typescript-eslint"],
   "rules": {
-    "max-params": ["error", 7],
+    "max-params": [
+      "error",
+      7
+    ],
     "@typescript-eslint/no-unused-vars": "error",
+    "no-useless-constructor": "off",
+    "@typescript-eslint/no-useless-constructor": "error",
     "@typescript-eslint/naming-convention": [
       "error",
       {
-        "selector": ["variable", "function", "method", "import"],
-        "format": ["camelCase"],
+        "selector": [
+          "variable",
+          "function",
+          "method",
+          "import"
+        ],
+        "format": [
+          "camelCase"
+        ],
         "leadingUnderscore": "forbid",
         "trailingUnderscore": "forbid"
       },
       {
-        "selector": ["typeLike", "enum", "class"],
-        "format": ["PascalCase"]
+        "selector": [
+          "typeLike",
+          "enum",
+          "class"
+        ],
+        "format": [
+          "PascalCase"
+        ]
       },
       {
-        "selector": ["interface"],
-        "format": ["PascalCase"],
-        "prefix": ["I"]
+        "selector": [
+          "interface"
+        ],
+        "format": [
+          "PascalCase"
+        ],
+        "prefix": [
+          "I"
+        ]
       },
       {
-        "selector": ["variable"],
-        "format": ["PascalCase"],
-        "types": ["boolean"],
+        "selector": [
+          "variable"
+        ],
+        "format": [
+          "PascalCase"
+        ],
+        "types": [
+          "boolean"
+        ],
         "prefix": [
           "is",
           "are",
@@ -52,7 +83,10 @@
       {
         "ignoreArrayIndexes": true,
         "ignoreEnums": true,
-        "ignore": [-1, 1],
+        "ignore": [
+          -1,
+          1
+        ],
         "ignoreDefaultValues": true,
         "ignoreNumericLiteralTypes": true,
         "ignoreReadonlyClassProperties": true,
