--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Typescript course",
     "main": "index.js",
     "scripts": {
-        "lint": "eslint ./**/*.ts --fix",
+        "lint": "eslint ./src/**/*.ts --fix",
         "dev": "tsc"
     },
     "author": "Josias Valentim de Figueredo",
@@ -17,7 +17,6 @@
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-promise": "^6.1.1",
-        "prettier": "3.2.5",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.4.4"
