--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "lint": "eslint ./src/**/*.ts --fix",
+        "prepare": "husky install",
         "dev": "tsc"
     },
     "author": "Josias Valentim de Figueredo",
@@ -17,6 +18,7 @@
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-promise": "^6.1.1",
+        "husky": "^9.0.11",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.4.4"
