--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,11 @@
     "@typescript-eslint/no-unused-vars": "error",
     "no-useless-constructor": "off",
     "@typescript-eslint/no-useless-constructor": "error",
+    "sort-imports":"error",
+    "no-duplicate-imports":"error",
+    "eslint-plugin-import/first":"off",
+     "eslint-plugin-import/no-deprecated": "off",
+    "@typescript-eslint/no-floating-promises": "error",
     "@typescript-eslint/naming-convention": [
       "error",
       {
