--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-promise": "^6.1.1",
         "husky": "^9.0.11",
+        "lint-staged": "^15.2.2",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.4.4"
