--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,10 @@
     "es2021": true,
     "node": true
   },
-  "extends": "standard-with-typescript",
+  "extends": [
+    "standard-with-typescript",
+    "plugin:prettier/recommended"
+  ],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
@@ -12,6 +15,15 @@
     ]
   },
   "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "semi": false,
+        "singleQuote": true,
+        "trailingComma": "es5",
+        "endOfLine":"auto"
+      }
+    ],
     "max-params": [
       "error",
       7
@@ -19,10 +31,10 @@
     "@typescript-eslint/no-unused-vars": "error",
     "no-useless-constructor": "off",
     "@typescript-eslint/no-useless-constructor": "error",
-    "sort-imports":"error",
-    "no-duplicate-imports":"error",
-    "eslint-plugin-import/first":"off",
-     "eslint-plugin-import/no-deprecated": "off",
+    "sort-imports": "error",
+    "no-duplicate-imports": "error",
+    "eslint-plugin-import/first": "off",
+    "eslint-plugin-import/no-deprecated": "off",
     "@typescript-eslint/no-floating-promises": "error",
     "@typescript-eslint/naming-convention": [
       "error",
