--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
         "@types/node": "^20.12.3",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-config-standard-with-typescript": "^43.0.1",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-n": "^16.6.2",
+        "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-promise": "^6.1.1",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
+        "prettier": "^3.2.5",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.4.4"
