--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     },
     "compilerOptions": {
         "module": "CommonJS",
-        "target": "ES2019" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+        "target": "ES2020" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
         "allowJs": true /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */,
         "sourceMap": true /* Create source map files for emitted JavaScript files. */,
         "outDir": "./output/" /* Specify an output folder for all emitted files. */,
@@ -13,7 +13,7 @@
         "strict": true /* Enable all strict type-checking options. */,
         "noImplicitAny": true /* Enable error reporting for expressions and declarations with an implied 'any' type. */,
         "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
-        "lib": [] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
+        "lib": ["DOM","es2015"] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
         "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
         "skipLibCheck": true /* Skip type checking all .d.ts files. */,
         "checkJs": true,
