--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,33 @@
 {
-    "ts-node": {
-        "files": true
-    },
-    "compilerOptions": {
-        "module": "CommonJS",
-        "target": "ES2020" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-        "allowJs": true /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */,
-        "sourceMap": true /* Create source map files for emitted JavaScript files. */,
-        "outDir": "./output/" /* Specify an output folder for all emitted files. */,
-        "rootDir": "./src/scripts/" /* Specify the root folder within your source files. */,
-        "removeComments": true /* Remove comments from source files. */,
-        "strict": true /* Enable all strict type-checking options. */,
-        "noImplicitAny": true /* Enable error reporting for expressions and declarations with an implied 'any' type. */,
-        "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
-        "lib": ["DOM","es2015"] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
-        "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-        "skipLibCheck": true /* Skip type checking all .d.ts files. */,
-        "checkJs": true,
-        "noLib": false,
-        "allowUnreachableCode": false
-    }
+  "ts-node": {
+    "files": true
+  },
+  "compilerOptions": {
+    "module": "CommonJS",
+    "target": "ES2023" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    "allowJs": true /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */,
+    "sourceMap": true /* Create source map files for emitted JavaScript files. */,
+    "outDir": "./dist" /* Specify an output folder for all emitted files. */,
+    "rootDir": "./src/scripts" /* Specify the root folder within your source files. */,
+    "removeComments": true /* Remove comments from source files. */,
+    "strict": true /* Enable all strict type-checking options. */,
+    "noImplicitAny": true /* Enable error reporting for expressions and declarations with an implied 'any' type. */,
+    "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
+    "lib": [
+      "DOM",
+      "ES2017"
+    ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
+    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
+    "checkJs": true,
+    "noLib": false,
+    "allowUnreachableCode": false
+  },
+  "include": [
+    "src/scripts/**/*"
+  ],
+   "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
