--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "scripts": {
         "lint": "eslint ./src/**/*.ts --fix",
         "prepare": "husky install",
-        "dev": "tsc"
+        "tpl": "tsc",
+        "dev": "webpack --mode development",
+        "prd": "webpack --mode production",
+        "build": "cross-env WEBPACK_ENTRY_FILE=$npm_config_entry webpack --mode development"
     },
     "author": "Josias Valentim de Figueredo",
     "license": "MIT",
     "devDependencies": {
         "@types/node": "^20.12.3",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "cross-env": "^7.0.3",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-config-standard-with-typescript": "^43.0.1",
@@ -20,11 +24,15 @@
         "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-promise": "^6.1.1",
+        "glob": "^11.0.0",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5",
+        "ts-loader": "^9.5.1",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
-        "typescript": "^5.4.4"
+        "typescript": "^5.5.3",
+        "webpack": "^5.93.0",
+        "webpack-cli": "^5.1.4"
     }
 }
