--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "allowJs": true /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */,
     "sourceMap": true /* Create source map files for emitted JavaScript files. */,
     "outDir": "./dist" /* Specify an output folder for all emitted files. */,
-    "rootDir": "./src/scripts" /* Specify the root folder within your source files. */,
+    "rootDir": "src/" /* Specify the root folder within your source files. */,
     "removeComments": true /* Remove comments from source files. */,
     "strict": true /* Enable all strict type-checking options. */,
     "noImplicitAny": true /* Enable error reporting for expressions and declarations with an implied 'any' type. */,
@@ -24,7 +24,7 @@
     "allowUnreachableCode": false
   },
   "include": [
-    "src/scripts/**/*"
+    "src/**/*"
   ],
    "exclude": [
     "node_modules",
