--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,7 @@
             "outFiles": ["${workspaceFolder}/dist/*.js"],
             "skipFiles": ["<node_internals>/**"],
             "program": "${workspaceFolder}/dist/bundle.js",
+            "sourceMaps": true,
         }
     ]
 }
