--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,8 @@
     "paths": {
       "*": ["node_modules/*", "src/*"]
     },
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
   },
   "include": [
     "src/**/*"
