--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     /* --- */
     "removeComments": true, // Removes comments from output files
     "strict": true, // Enables all strict type-checking options
-    "noImplicitAny": true, // Raises errors for declarations with an implied 'any' type
+    "noImplicitAny": false, // Raises errors for declarations with an implied 'any' type
     "esModuleInterop": true, // Enables interoperability between CommonJS and ES modules
     "lib": [
       "ESNext"
