--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,16 @@
     "files": true // Allows ts-node to load all files in the project
   },
   "compilerOptions": {
-    "module": "CommonJS", // Specifies the module system to use (CommonJS is common in Node.js)
-    "target": "ES2023", // Sets the version of ECMAScript the code should be compatible with (from ES2023)
+    "module": "ES2015", // Specifies the module system to use (CommonJS is common in Node.js)
+    "target": "ESNEXT", // Sets the version of ECMAScript the code should be compatible with (from ES2023)
     "allowJs": true, // Allows JavaScript files to be part of your TypeScript project
     "sourceMap": true, // Generates source map files for easier debugging
     "outDir": "./dist", // Output directory for compiled files
-    "rootDir": "src/", // Root directory for input files
-    /* Decorator Context */
+    "rootDirs": [
+      "src/",
+      "src/calculator/assets/typescript"
+    ], // Root directory for input files
+    /* Decorators Context */
     "useDefineForClassFields": false, // When set to false, allows the compiler to use the previous behavior for class field definitions, enabling better compatibility with decorators.
     "experimentalDecorators": true, // Enables the use of decorators, allowing you to annotate classes and methods.
     "emitDecoratorMetadata": true, // Emits design-type metadata for decorators, useful for libraries and frameworks that rely on reflection to determine types at runtime.
@@ -19,7 +22,8 @@
     "noImplicitAny": false, // Raises errors for declarations with an implied 'any' type
     "esModuleInterop": true, // Enables interoperability between CommonJS and ES modules
     "lib": [
-      "ESNext"
+      "ESNext",
+      "DOM"
     ], // Specifies which libraries should be included (from ESNext)
     "forceConsistentCasingInFileNames": true, // Ensures that casing is consistent in imports
     "skipLibCheck": true, // Skips type checking of declaration files (.d.ts)
