--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -57,9 +57,16 @@
       "error",
       {
         "groups": [
-          ["builtin", "external"],
+          [
+            "builtin",
+            "external"
+          ],
           "internal",
-          ["parent", "sibling", "index"]
+          [
+            "parent",
+            "sibling",
+            "index"
+          ]
         ],
         "newlines-between": "always",
         "alphabetize": {
@@ -126,6 +133,12 @@
           "will",
           "toBe"
         ]
+      }
+    ],
+    "@typescript-eslint/no-extra-non-null-assertion": [
+      "error",
+      {
+        "allowNullableAssertion": true
       }
     ],
     "@typescript-eslint/no-magic-numbers": [
