--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "lint": "eslint ./src/**/*.ts --fix",
         "prepare": "husky install",
         "tpl": "tsc",
-        "dev": "webpack --mode development \"concurrently \"npm run sass\" \"npm run tsc\"",
+        "dev": "concurrently \"npm run sass\" \"npm run tsc\" \"webpack --mode development\"",
         "prd": "webpack --mode production",
         "build": "cross-env WEBPACK_ENTRY_FILE=$npm_config_entry webpack --mode development",
         "sass": "sass --watch --style=compressed ./src/calculator/assets/scss:./src/calculator/assets/scss",
@@ -18,6 +18,7 @@
     "devDependencies": {
         "@types/node": "^20.12.3",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "concurrently": "^6.2.0",
         "cross-env": "^7.0.3",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
@@ -27,18 +28,17 @@
         "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-promise": "^6.1.1",
-        "glob": "^11.0.0",
+        "glob": "^11.0.1",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5",
+        "sass": "^1.49.8",
         "ts-loader": "^9.5.2",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.7.3",
         "webpack": "^5.93.0",
-        "webpack-cli": "^5.1.4",
-        "sass": "^1.49.8",
-        "concurrently": "^6.2.0"
+        "webpack-cli": "^5.1.4"
     },
     "dependencies": {
         "@types/reflect-metadata": "^0.0.5",
