--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,20 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
             "type": "node",
             "request": "launch",
-            "name": "Run TS Code",
+            "name": "Run TS Code with Webpack",
             "console": "integratedTerminal",
-            "autoAttachChildProcesses": true,
-            "preLaunchTask": "build",
-            "outFiles": ["${workspaceFolder}/dist/*.js"],
-            "skipFiles": ["<node_internals>/**"],
             "program": "${workspaceFolder}/dist/bundle.js",
+            "preLaunchTask": "build current file",
             "sourceMaps": true,
-        }
+            "outFiles": [
+                "${workspaceFolder}/dist/**/*.js"
+            ],
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
     ]
 }
