--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,20 +2,26 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "build",
+      "label": "build current file",
       "type": "shell",
       "command": "npm",
       "args": [
         "run",
-        "build",
-         "--entry", "${file}"
+        "build"
       ],
+      "options": {
+        "env": {
+          "npm_config_entry": "${file}"
+        }
+      },
       "group": {
         "kind": "build",
         "isDefault": true
       },
-      "problemMatcher": ["$tsc"],
-      "detail": "Builds the project using Webpack"
+      "problemMatcher": [
+        "$tsc"
+      ],
+      "detail": "Builds the current file using Webpack"
     }
   ]
 }
