--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Typescript course",
     "main": "index.js",
     "scripts": {
-        "lint": "eslint ./src/**/*.ts --fix",
+        "lint": "eslint . src/**/*.ts --fix",
         "prepare": "husky install",
         "tpl": "tsc",
         "dev": "concurrently \"npm run sass\" \"npm run tsc\" \"webpack --mode development\"",
@@ -16,11 +16,12 @@
     "author": "Josias Valentim de Figueredo",
     "license": "MIT",
     "devDependencies": {
+        "@eslint/js": "^9.19.0",
         "@types/node": "^20.12.3",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "concurrently": "^6.2.0",
         "cross-env": "^7.0.3",
-        "eslint": "^8.57.0",
+        "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-config-standard-with-typescript": "^43.0.1",
         "eslint-import-resolver-typescript": "^3.7.0",
@@ -29,6 +30,7 @@
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-promise": "^6.1.1",
         "glob": "^11.0.1",
+        "globals": "^15.14.0",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5",
@@ -37,6 +39,7 @@
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.7.3",
+        "typescript-eslint": "^8.22.0",
         "webpack": "^5.93.0",
         "webpack-cli": "^5.1.4"
     },
