--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,13 @@
     "files": true // Allows ts-node to load all files in the project
   },
   "compilerOptions": {
-    "module": "ES2015", // Specifies the module system to use (CommonJS is common in Node.js)
+    "module": "NodeNext", // Specifies the module system to use (CommonJS is common in Node.js)
     "target": "ESNEXT", // Sets the version of ECMAScript the code should be compatible with (from ES2023)
+    "moduleResolution": "nodenext",
     "allowJs": true, // Allows JavaScript files to be part of your TypeScript project
     "sourceMap": true, // Generates source map files for easier debugging
     "outDir": "./dist", // Output directory for compiled files
-    "rootDir": "./src", // Root directory for input files
+    "rootDir": "./", // Root directory for input files
     /* Decorators Context */
     "useDefineForClassFields": false, // When set to false, allows the compiler to use the previous behavior for class field definitions, enabling better compatibility with decorators.
     "experimentalDecorators": true, // Enables the use of decorators, allowing you to annotate classes and methods.
@@ -18,6 +19,7 @@
     "strict": true, // Enables all strict type-checking options
     "noImplicitAny": false, // Raises errors for declarations with an implied 'any' type
     "esModuleInterop": true, // Enables interoperability between CommonJS and ES modules
+    "noEmit": false,
     "lib": [
       "ESNext",
       "DOM"
@@ -27,13 +29,6 @@
     "checkJs": true, // Allows type checking in JavaScript files
     "noLib": false, // Does not omit default libraries; should generally be false
     "allowUnreachableCode": false, // Raises errors for unreachable code
-    "baseUrl": "./", // Sets the base for resolving modules
-    "paths": {
-      "*": [
-        "node_modules/*",
-        "src/*"
-      ] // Defines paths for resolving modules
-    }
   },
   "include": [
     "src/**/*" // Includes all TypeScript files in the src folder for compilation
